# base-compat

./: .travis.yml  base-compat.cabal  cabal.project
check/: type-check.cabal
typediff/: package.yaml  typediff.cabal
