name:                type-check
version:             0.1.0
synopsis:            Checks that exported type signatures match what's expected
description:         Checks that exported type signatures match what's expected.
author:              Simon Hengel <sol@typeful.net>,
                     João Cristóvão <jmacristovao@gmail.com>,
                     Ryan Scott <ryan.gl.scott@gmail.com>
maintainer:          Simon Hengel <sol@typeful.net>,
                     João Cristóvão <jmacristovao@gmail.com>,
                     Ryan Scott <ryan.gl.scott@gmail.com>
copyright:           (c) 2012-2017 Simon Hengel,
                     (c) 2014-2017 João Cristóvão,
                     (c) 2015-2017 Ryan Scott
license:             MIT
license-file:        LICENSE
category:            Compatibility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.markdown,
                     check-hs/*.check.hs,
                     index/*.index,
                     types/*.types
tested-with:         GHC == 7.0.1,  GHC == 7.0.2,  GHC == 7.0.3,  GHC == 7.0.4
                   , GHC == 7.2.1,  GHC == 7.2.2
                   , GHC == 7.4.1,  GHC == 7.4.2
                   , GHC == 7.6.1,  GHC == 7.6.2,  GHC == 7.6.3
                   , GHC == 7.8.1,  GHC == 7.8.2,  GHC == 7.8.3,  GHC == 7.8.4
                   , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                   , GHC == 8.0.1,  GHC == 8.0.2
                   , GHC == 8.2.1,  GHC == 8.2.2
                   , GHC == 8.4.1
library
  exposed-modules:
      TypeDump
      Util
  ghc-options:
      -Wall
  default-language:
      Haskell2010
  hs-source-dirs:
      .
  build-depends:
      base >= 4.3 && < 5
    , process

test-suite type-check-test
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  default-language:
      Haskell2010
  hs-source-dirs:
      test
  main-is:
      TypeCheck.hs
  build-depends:
      base >= 4.3 && < 5
    , directory
    , filepath
    , hspec >= 1.8
    , HUnit >= 1.2.5
    , process >= 1.0.1.1
    , temporary
    , type-check
